--- a/server_side/package.json
+++ b/server_side/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "node-modules": "^1.0.1",
     "package.json": "^2.0.1"
