--- a/server_side/package.json
+++ b/server_side/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.11.12",
     "node-modules": "^1.0.1",
-    "package.json": "^2.0.1"
+    "package.json": "^2.0.1",
+    "validator": "^13.5.2"
   },
   "devDependencies": {},
   "scripts": {
