--- a/server-side/package.json
+++ b/server-side/package.json
@@ -5,12 +5,22 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.11.12",
     "node-modules": "^1.0.1",
+    "nodemailer": "^6.4.17",
     "package.json": "^2.0.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-oauth2": "^1.5.0",
+    "router": "^1.3.5",
+    "routers": "^0.1.4",
+    "sendmail": "^1.6.1",
     "validator": "^13.5.2"
   },
   "devDependencies": {},
