--- a/client-side/package.json
+++ b/client-side/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
     "history": "^4.10.1",
-    "react": "^17.0.1",
+    "moment": "^2.29.1",
+    "react": "^17.0.2",
+    "react-date-range": "^1.1.3",
+    "react-dates": "^21.8.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
